# Infera--Ai-Intelligence-Guide

./: ._has_bullet.py  ._has_middot.py  ._inspect.py  ._inspect2.py  ._search_pipe.py  .aider.conf.yml  .aiderignore  .gitignore  .gitignore.local  Agents.md.docx  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IDEA.txt  Modelfile.txt  README.md  Start_Aider.bat.txt  UI AND UX.txt  agents_doc.txt  idea.rtf  notepad .aider.conf.yml  package-lock.json  package.json  tsconfig.base.json
apps/api/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/ai_helper_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20251003_01_initial_schema.py  79b662da8d66_add_user_model.py
apps/api/app/: main.py
apps/api/app/core/: config.py  dependencies.py  logging.py  metrics.py  security.py
apps/api/app/data/: comparisons.py  learn.py  news.py  news_feeds.py
apps/api/app/db/: database.py  init.py  utils.py
apps/api/app/middleware/: instrumentation.py
apps/api/app/models/: catalog.py  learn.py  news.py  user.py
apps/api/app/routers/: __init__.py  auth.py  comparisons.py  health.py  learn.py  metrics.py  news.py  search.py  users.py
apps/api/app/schemas/: base.py  catalog.py  learn.py  news.py  search.py  token.py  user.py
apps/api/app/services/: base.py  catalog.py  ingestion.py  learn.py  news.py  search.py  search_index.py  user.py
apps/api/app/workers/: __init__.py  rss.py  (+1 more)
apps/api/scripts/: check.sh  ingest_news.py  sync-search.sh  test-postgres.sh
apps/api/tests/: test_endpoints.py
(+990 files in other folders)
