[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-helper-api"
version = "0.1.0"
description = "FastAPI backend for the AI Helper platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.1,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "sqlalchemy>=2.0.30,<3.0.0",
    "asyncpg>=0.29.0,<0.30.0",
    "aiosqlite>=0.19.0,<0.20.0",
    "alembic>=1.13.0,<2.0.0",
    "feedparser>=6.0.10,<7.0.0",
    "meilisearch>=0.31.0,<0.32.0",
    "prometheus-client>=0.19.0,<0.20.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.0.0,<9.0.0"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]
